It does not matter how slowly you go as long as you do not stop.
-- Confucius

First they ignore you, then they laugh at you, then they fight you,
then you win. –- Mahatma Gandhi

Thu, May 21, 2009
---------------------------------------------------------------------
Fixed JavaScript and CSS caching issues in production environment.

Wed, May 20, 2009
---------------------------------------------------------------------
- Gracefully handle use cases when previous or related asset is deleted or protected.
- Make sure commentable object exists and is accessible to current user.
- Implemented specs for Comments controller.

Tue, May 19, 2009
---------------------------------------------------------------------
- Added missing and protected object handling for #convert, #promote, #reject (Leads).
- Added new [tracked_by] named scope for Tasks.
- Added missing and protected object handling for Tasks.
- Refactored rescue clause to use respond_to_not_found().

Mon, May 18, 2009
---------------------------------------------------------------------
- Added missing and protected object handling for #update and #delete (all except Tasks).

Sun, May 17, 2009
---------------------------------------------------------------------
- Added missing object handling for #edit action (all core objects except Tasks).
- If object permissions prevent access, treat the object as missing.
- Refacoring: use more idiomatic Rails named scope (User#except).

Sat, May 16, 2009
---------------------------------------------------------------------
- Added missing object handling for #show action (all core objects except Tasks).
- Added controller routing specs for new routes.

Fri, May 15, 2009
---------------------------------------------------------------------
- Replaced explicit MySQL trigger creation with [add_uuid_trigger].

Thu, May 14, 2009
---------------------------------------------------------------------
- Started with LH #34 (Gracefully handle missing objects).