@@ -10,8 +10,10 @@
     %style= yield :styles
 
     = javascript_include_tag :defaults, :cache => "cache/all"
-    - unless tabless_layout?
-      = javascript_include_tag "calendar_date_select/calendar_date_select.js", "calendar_date_select/format_american.js", :cache => "cache/calendar_date_select"
+    - if tabless_layout?
+      = javascript_include_tag "crm_loginout.js"
+    - else
+      = javascript_include_tag "crm_classes.js", "calendar_date_select/calendar_date_select.js", "calendar_date_select/format_american.js", :cache => "cache/classes"
     %script{:type => "text/javascript"}= yield :javascript
 
   %body
